fix scrollbar color in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,10 @@
   }
 }
 
+:root {
+  color-scheme: light dark;
+}
+
 @theme {
   --font-cousine: "Cousine";
 }
